# Audio-Plugins

./: .gitignore  CMakeLists.txt  README.md
Basic Plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
DSP Plugin/: AudioBufferQueue.h  AudioEngine.h  CMakeLists.txt  Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Voice.h
Gui Advanced/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  RectComp.h
Gui Expert/: CMakeLists.txt  Components.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Gui Plugin/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
